--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
 
     .hero {
       text-align: center;
-      padding: 100px 20px;
-      background: linear-gradient(135deg, #004080, #1a75ff);
-      color: white;
-      animation: fadeIn 2s ease-in-out;
+      padding: 20px 20px;
+      background-color: #ffffff;
+      color: #002147;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+    .hero img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .hero h1 {
@@ -82,7 +84,6 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
-      animation: fadeIn 1.5s ease-in-out;
     }
 
     .section h2 {
@@ -100,33 +101,11 @@
       line-height: 1.6;
     }
 
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .service-item {
-      background-color: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      width: 280px;
-      transition: transform 0.3s ease;
-    }
-
-    .service-item:hover {
-      transform: translateY(-5px);
-    }
-
     .contact {
       text-align: center;
       padding: 60px 20px;
       background-color: #ffffff;
       border-top: 1px solid #ddd;
-      animation: fadeIn 1.5s ease-in-out;
     }
 
     .contact h2 {
@@ -150,32 +129,6 @@
       text-decoration: underline;
     }
 
-    .floating-buttons {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      z-index: 100;
-    }
-
-    .floating-buttons a {
-      background-color: #25D366;
-      color: white;
-      padding: 12px 16px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      display: flex;
-      align-items: center;
-    }
-
-    .floating-buttons a.call {
-      background-color: #007bff;
-    }
-
     footer {
       background-color: #002147;
       color: white;
@@ -194,11 +147,11 @@
 
   <nav>
     <a href="#about">About</a>
-    <a href="#services">Services</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="hero">
+    <img src="image7.jpg.jpg" alt="Tomar Law Associates Banner">
     <h1>Welcome to Tomar Law Associates</h1>
     <p>Expert Legal Representation by Lokendra Singh Tomar</p>
   </div>
@@ -208,25 +161,6 @@
     <p>The association includes Narendra Pal Pawaiya, Kamlesh Kulshrestha, Dharmendra Parmar, Kuldeep Dandotia, Anuj Tiwari, Sachin Srivastava, Naresh Rathore, Satendra Singh Tomar, Divya Pratap Singh Tomar Advocate, and is led by Lokendra Singh Tomar.</p>
   </div>
 
-  <div class="section" id="services">
-    <h2>Our Legal Services</h2>
-    <p>Thank you for contacting M.P. High Court Advocate Lokendra Singh Tomar. Please let us know how we can help you.</p>
-    <div class="services">
-      <div class="service-item">Criminal Cases</div>
-      <div class="service-item">Bail Application</div>
-      <div class="service-item">Suspension</div>
-      <div class="service-item">Family Matter</div>
-      <div class="service-item">Domestic Violence</div>
-      <div class="service-item">Maintenance</div>
-      <div class="service-item">Divorce</div>
-      <div class="service-item">Habeas Corpus</div>
-      <div class="service-item">Writ Petition</div>
-      <div class="service-item">Misc. Petition</div>
-      <div class="service-item">POSCO Specialist</div>
-      <div class="service-item">Marriage</div>
-    </div>
-  </div>
-
   <div class="contact" id="contact">
     <h2>Contact</h2>
     <div class="contact-info">
@@ -234,11 +168,6 @@
       <p><strong>Phone:</strong> +91-9826943953, +91-9425078688, +91-9407204773</p>
       <p><strong>Email:</strong> <a href="mailto:lokendratomaradvocate@gmail.com">lokendratomaradvocate@gmail.com</a></p>
     </div>
-  </div>
-
-  <div class="floating-buttons">
-    <a href="tel:+919826943953" class="call">📞 Call Us</a>
-    <a href="https://wa.me/919826943953" target="_blank">💬 WhatsApp</a>
   </div>
 
   <footer>
