--- a/index.html
+++ b/index.html
@@ -57,17 +57,15 @@
 
     .hero {
       text-align: center;
-      padding: 20px;
-      background-color: #ffffff;
-      color: #002147;
+      padding: 100px 20px;
+      background: linear-gradient(135deg, #004080, #1a75ff);
+      color: white;
+      animation: fadeIn 2s ease-in-out;
     }
 
-    .hero img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .hero h1 {
@@ -84,6 +82,7 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     .section h2 {
@@ -127,6 +126,7 @@
       padding: 60px 20px;
       background-color: #ffffff;
       border-top: 1px solid #ddd;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     .contact h2 {
@@ -150,6 +150,32 @@
       text-decoration: underline;
     }
 
+    .floating-buttons {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      z-index: 100;
+    }
+
+    .floating-buttons a {
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      display: flex;
+      align-items: center;
+    }
+
+    .floating-buttons a.call {
+      background-color: #007bff;
+    }
+
     footer {
       background-color: #002147;
       color: white;
@@ -157,6 +183,26 @@
       padding: 20px 10px;
       margin-top: 40px;
       font-size: 0.95em;
+    }
+
+    .testimonial {
+      background-color: #f0f4f8;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .testimonial h2 {
+      color: #002147;
+      font-size: 2.2em;
+      margin-bottom: 30px;
+    }
+
+    .testimonial p {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.1em;
+      line-height: 1.6;
+      color: #333;
     }
   </style>
 </head>
@@ -173,7 +219,6 @@
   </nav>
 
   <div class="hero">
-    <img src="image7.jpg.jpg" alt="Tomar Law Associates Banner">
     <h1>Welcome to Tomar Law Associates</h1>
     <p>Expert Legal Representation by Lokendra Singh Tomar</p>
   </div>
@@ -190,7 +235,7 @@
       <div class="service-item">Criminal Cases</div>
       <div class="service-item">Bail Application</div>
       <div class="service-item">Suspension</div>
-      <div class="service-item">Family Matters</div>
+      <div class="service-item">Family Matter</div>
       <div class="service-item">Domestic Violence</div>
       <div class="service-item">Maintenance</div>
       <div class="service-item">Divorce</div>
@@ -202,6 +247,11 @@
     </div>
   </div>
 
+  <div class="testimonial">
+    <h2>Client Testimonials</h2>
+    <p>"Thanks to Tomar Law Associates, I was able to win my legal battle with confidence. Lokendra Singh Tomar and his team are truly experts in the field. Highly recommended!"</p>
+  </div>
+
   <div class="contact" id="contact">
     <h2>Contact</h2>
     <div class="contact-info">
@@ -209,6 +259,11 @@
       <p><strong>Phone:</strong> +91-9826943953, +91-9425078688, +91-9407204773</p>
       <p><strong>Email:</strong> <a href="mailto:lokendratomaradvocate@gmail.com">lokendratomaradvocate@gmail.com</a></p>
     </div>
+  </div>
+
+  <div class="floating-buttons">
+    <a href="tel:+919826943953" class="call">📞 Call Us</a>
+    <a href="https://wa.me/919826943953" target="_blank">💬 WhatsApp</a>
   </div>
 
   <footer>
