--- a/index.html
+++ b/index.html
@@ -204,9 +204,51 @@
       line-height: 1.6;
       color: #333;
     }
+
+    .team {
+      background-color: #ffffff;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .team h2 {
+      font-size: 2.2em;
+      color: #002147;
+      margin-bottom: 30px;
+    }
+
+    .team-members {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .team-member {
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      padding: 20px;
+      width: 200px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      font-weight: 600;
+    }
+
+    .banner {
+      background-color: #ffc107;
+      color: #000;
+      text-align: center;
+      padding: 15px 20px;
+      font-size: 1.1em;
+      font-weight: bold;
+      position: relative;
+    }
   </style>
 </head>
 <body>
+
+  <div class="banner">
+    🔥 High Court Specialist – Lokendra Singh Tomar, Advocate – Contact Us Now for Expert Legal Help!
+  </div>
 
   <header>
     <h1>Tomar Law Associates</h1>
@@ -215,6 +257,7 @@
   <nav>
     <a href="#about">About</a>
     <a href="#services">Services</a>
+    <a href="#team">Team</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -244,6 +287,21 @@
       <div class="service-item">Misc. Petition</div>
       <div class="service-item">POSCO Specialist</div>
       <div class="service-item">Marriage</div>
+    </div>
+  </div>
+
+  <div class="team" id="team">
+    <h2>Our Legal Team</h2>
+    <div class="team-members">
+      <div class="team-member">Narendra Pal Pawaiya</div>
+      <div class="team-member">Kamlesh Kulshrestha</div>
+      <div class="team-member">Dharmendra Parmar</div>
+      <div class="team-member">Kuldeep Dandotia</div>
+      <div class="team-member">Anuj Tiwari</div>
+      <div class="team-member">Sachin Srivastava</div>
+      <div class="team-member">Naresh Rathore</div>
+      <div class="team-member">Satendra Singh Tomar</div>
+      <div class="team-member">Divya Pratap Singh Tomar</div>
     </div>
   </div>
 
