--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     }
 
     .hero img {
-      max-width: 80%; /* Reduced to 80% of the container */
+      max-width: 100%;
       height: auto;
       border-radius: 10px;
       margin-bottom: 20px;
